# professional-services-public

./: .gitignore  .mise.toml  AGENT.md  README.md  SECURITY.md
.sourcegraph/: documentation.rule.md  memory.md  spring-field-injection.rule.md
batch-change-retry/: README.md  retry-batch-spec.py
bootstrap-instance/: README.md  pyproject.toml
entitlement-sync/: AGENTS.md  README.md  pyproject.toml  user-entitlements.csv
entitlement-sync/src/entitlement_sync/: main.py
entitlement-sync/tests/: test_entitlement_sync.py
examples/: README.md  sourcegraph-brand.md
examples/batch_change/: add-missing-file.yaml  spring-boot-2-to-3.yaml
examples/language/: README.md
examples/ldap-rbac-sync/: README.md  ldap-rbac-sync.py  requirements.txt
examples/organization-management-script/: README.md
examples/repo-manifest-to-markdown/: README.md  generate-markdown.py
examples/sg-images-tool/: README.md  (+1 more)
ldap-rbac-sync/: README.md  ldap-rbac-sync.py  requirements.txt
list-helm-images/: README.md
organization-management-script/: README.md
organizations/: README.md  organization-management.py
outbound-request-log/: README.md  outbound-request-log.py
perforce-repo-perms/: p4-broker-command-handler.md
redis-log/: README.md  read_redis_queue.py
repo-management/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CSV_SCHEMA.md  README.md  TODO.md  admin-permissions.md  list-repos.py
repo-manifest-to-markdown/: README.md  generate-markdown.py
sourcegraph_bootstrap/: README.md  main.py  pyproject.toml
zoekt-skip-reasons/: README.md  zoekt_skip_reasons.py
(+107 files in other folders)
