[project]
name = "entitlement-sync"
version = "0.1.0"
description = "Example application to manage sync Sourcegraph entitlements with an external system"
readme = "README.md"
authors = [
    { name = "Sourcegraph Inc." }
]
requires-python = ">=3.12"
dependencies = [
    "truststore>=0.10.4",
]

[project.scripts]
entitlement-sync = "entitlement_sync.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
